<resources>
    <string name="Please_fill_in_all_fields">Please fill in all fields</string>
    <string name="Password_8_characters">The password must contain at least 8 characters</string>
    <string name="room">room</string>
    <string name="Path_Objects">Objects</string>
    <string name="hour">hour</string>
    <string name="date">date</string>
    <string name="description">Please enter the name item</string>
    <string name="image">image</string>
    <string name="replace_base_64_string">data:image/png;base64,</string>
    <string name="error">Error</string>
    <string name="incorrect_user_password">User Name or Password is incorrect</string>
    <string name="description_too_long">Description too long</string>
    <string name="data_sending_error">Data sending error</string>
    <string name="Path_User">Users</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="You_cant_be_registered">You can\'t be registered</string>
    <string name="Login">Login</string>
    <string name="lost_items">Lost Items</string>
    <string name="Welcome">Welcome to FindMe</string>
    <string name="Register">Register</string>
    <string name="share_a_lost_item">Share a lost item</string>
    <string name="Picture">Picture</string>
    <string name="Share">Share</string>
    <string name="Logout">Logout</string>
    <string name="create_an_account">Create an account</string>
    <string name="create">Create</string>
    <string name="app_name">FindMe</string>
    <string name="item_Name">item name</string>
    <string name="object_losted_in">Object losted in :</string>
    <string name="logout">logout</string>
    <string name="add_an_Item">Add an Item</string>
    <string name="show_items">Show Items</string>
</resources>
