<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewObjectActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorClear" >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="90"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/share_a_lost_item" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/Room"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:backgroundTint="@color/colorClear"
                    android:hint="@string/room" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/ButtonHeure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_alarm_black_24dp"
                        android:text="@string/hour"
                        android:background="@color/colorPrimaryDark"
                        tools:ignore="RelativeOverlap" />

                    <TextView
                        android:id="@+id/Hour"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hour"
                        android:background="@color/colorClear"
                        android:textAlignment="center"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/ButtonDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:background="@color/colorPrimaryDark"
                        android:drawableStart="@drawable/ic_date_range_black_24dp"
                        tools:ignore="RelativeOverlap" />

                    <TextView
                        android:id="@+id/Date"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/date"
                        android:background="@color/colorClear"
                        android:textAlignment="center"
                        android:textSize="20sp" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/ImageTaked"
                    android:layout_width="170dp"
                    android:layout_height="92dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    tools:ignore="ContentDescription" />

                <Button
                    android:id="@+id/ButtonTakePicture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorPrimaryDark"
                    android:drawableStart="@drawable/ic_add_a_photo_black_24dp"
                    android:text="@string/Picture"
                    tools:ignore="RelativeOverlap" />

                <EditText
                    android:id="@+id/Description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:background="@color/colorClear"
                    android:maxLength="20"
                    android:hint="@string/description" />

                <Button
                    android:id="@+id/ButtonShare"
                    android:layout_width="200dp"
                    android:layout_marginTop="25dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="25dp"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/Share"
                    android:textColor="#fff" />

            </LinearLayout>

        <LinearLayout
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="10"
            android:orientation="horizontal"
            android:background="@color/colorPrimaryDark">

            <Button
                android:id="@+id/ShowItemButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:text="@string/show_items"
                android:textColor="@color/colorPrimary"
                android:drawableTop="@mipmap/ic_launcher_eye"
                android:textSize="15sp"
                android:background="@color/colorPrimaryDark" />
            <Button
                android:id="@+id/Logout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:text="@string/Logout"
                android:textColor="@color/colorPrimary"
                android:drawableTop="@mipmap/ic_launcher_arrow"
                android:textSize="15sp"
                android:background="@color/colorPrimaryDark"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>